argocd/keycloak/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:18.0.2
        args:
        - start
        - --auto-build
        - --db=postgres
        ports:
        - name: http
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8443
