argocd/keycloak/service.yml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8443
    targetPort: 8443
  selector:
    app: keycloak
  # type: LoadBalancer
